--- a/paper/biblio.bib
+++ b/paper/biblio.bib
@@ -12,6 +12,20 @@ volume = {1},
 year = {2017}
 }
 
+@article{SCAPS,
+author = {Burgelman, Marc and Nollet, P and Degrave, S},
+doi = {10.1016/S0040-6090(99)00825-1},
+isbn = {0040-6090},
+issn = {00406090},
+journal = {Thin Solid Films},
+keywords = {CdTe,Chalcopyrite,Modelling,Solar cells,Thin film},
+pages = {527--532},
+title = {{Modelling polycrystalline semiconductor solar cells}},
+url = {http://www.sciencedirect.com/science/article/pii/S0040609099008251},
+volume = {361--362},
+year = {2000}
+}
+
 
 @proceeding(FeBayes,
 title={Semiconductor parameter extraction via current-voltage characterization and Bayesian inference methods},
