latest version of paper

--- a/paper/Manuscript.tex
+++ b/paper/Manuscript.tex
@@ -39,9 +39,9 @@ urlcolor={blue!80!black}}
 \affiliation{Department of Mechanical Engineering, Massachusetts Institute of Technology, 77 Massachusetts Avenue, Cambridge, MA 02139, USA}
 
 \begin{abstract}
-  \hl{abstract text here}
+  Bayesian inference is a widely used and powerful analytical technique in fields such as astronomy and particle physics but has historically been underutilized in some other disciplines including semiconductor devices. In this work, we introduce \texttt{bayesim}, a Python package that utilizes adaptive grid sampling to efficiently generate a probability distribution over multiple input parameters to a forward model using a collection of experimental measurements. We discuss the implementation choices made in the code, showcase two examples in photovoltaics, and discuss general prerequisites for the approach to apply to other systems.
 
-  Target journal: Computer Physics Communications
+  [Target journal: Computer Physics Communications]
 \end{abstract}
 
 \maketitle
